# apple-reminder-cli

./: Cargo.toml  README.md
shortcuts/: GetTodos.shortcut  ModifyTodo.shortcut
src/: app.rs  lib.rs  main.rs
src/shortcuts/: fetch.rs
src/todo/: deserialize.rs  mod.rs  todo_obj.rs
