[package]
name = "reminders_sc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
crossterm = "0.23.2"
itertools = "0.10.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0.137"
serde_yaml = "0.8.24"
tui = "0.18.0"
